import com.kneelawk.spirv.SpirvCompilerPlugin

plugins {
    id 'java'
    id 'org.javamodularity.moduleplugin' version '1.5.0'
    id 'org.beryx.jlink' version '2.6.6'
    id 'application'
}

apply plugin: SpirvCompilerPlugin

version = '0.0.1'

sourceCompatibility = 11

mainClassName = "$moduleName/com.kneelawk.hellovulkan.HelloVulkan"

ext.jomlVersion = '1.9.12'
ext.lwjglVersion = '3.2.1'
ext.lwjglNatives = 'natives-linux'

sourceSets {
    simplefrag
    simplevert
}

repositories {
	jcenter()
}

dependencies {
	implementation "org.joml:joml:${jomlVersion}"
    implementation "com.google.guava:guava:27.0.1-jre"

	implementation "org.lwjgl:lwjgl:${lwjglVersion}"
	implementation "org.lwjgl:lwjgl-assimp:${lwjglVersion}"
	implementation "org.lwjgl:lwjgl-glfw:${lwjglVersion}"
	implementation "org.lwjgl:lwjgl-jemalloc:${lwjglVersion}"
	implementation "org.lwjgl:lwjgl-openal:${lwjglVersion}"
	implementation "org.lwjgl:lwjgl-stb:${lwjglVersion}"
	implementation "org.lwjgl:lwjgl-vulkan:${lwjglVersion}"

    runtime "org.lwjgl:lwjgl:${lwjglVersion}:${lwjglNatives}"
    runtime "org.lwjgl:lwjgl-assimp:${lwjglVersion}:${lwjglNatives}"
    runtime "org.lwjgl:lwjgl-glfw:${lwjglVersion}:${lwjglNatives}"
    runtime "org.lwjgl:lwjgl-jemalloc:${lwjglVersion}:${lwjglNatives}"
    runtime "org.lwjgl:lwjgl-openal:${lwjglVersion}:${lwjglNatives}"
    runtime "org.lwjgl:lwjgl-stb:${lwjglVersion}:${lwjglNatives}"
}

run {
    jvmArgs('--add-modules', 'org.lwjgl.natives,org.lwjgl.glfw.natives')
}

jlink {
    options = ['--compress', '2', '--no-header-files', '--no-man-pages', '--add-modules', 'org.lwjgl.natives,org.lwjgl.glfw.natives']
    launcher {
        name = 'HelloVulkan'
        jvmArgs = ['--add-modules', 'org.lwjgl.natives,org.lwjgl.glfw.natives']
    }
}

processResources {
    dependsOn(compileSimplevertSpirv, compileSimplefragSpirv)
    from(sourceSets.simplevert.spirv.outputDir, sourceSets.simplefrag.spirv.outputDir)
}